<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yeni_tema3"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/bank"
        android:textColor="#FFFFFF"
        android:textSize="60sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/pass"
            android:textColor="#FF0000"
            android:textSize="34sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="41dp">

        </FrameLayout>

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#434343"
            android:ems="10"
            android:hint="@string/sifre"
            android:inputType="numberPassword"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="49dp">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="102dp"
            android:layout_height="match_parent">

        </FrameLayout>

        <Button
            android:id="@+id/sayfa_gecis"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/giris"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>